<resources>
    <string name="app_name">OpenFoodFacts</string>
    <string name="hello_world">Hello world !</string>
    <string name="product_image">Product image</string>
    <string name="product_nutriscore">Product nutriscore</string>
    <string name="product_barcode">Barcode : %1$s</string>
    <string name="product_quantity">Quantity : %1$s</string>
    <string name="product_countries">Sell in : %1$s</string>
    <string name="product_no_countries">Sell in : Nowhere</string>
    <string name="product_ingredients">Ingredients : %1$s</string>
    <string name="product_no_ingredients">Ingredients : none</string>
    <string name="product_allergenic">Allergenic substances : %1$s</string>
    <string name="product_no_allergenic">Allergenic substances : None</string>
    <string name="product_additives">Additives : %1$s</string>
    <string name="product_no_additives">Additives : None</string>
    <string name="nutritionnal_title">Nutritional guidelines per 100g</string>
    <string name="product_calories">Product calories</string>
    <string name="fiche">Fiche</string>
    <string name="nutrition">Nutrition</string>
    <string name="tableau">Tableau</string>
    <string name="nutrition_infos_title">Nutritional guidelines per 100g</string>
    <string name="nutrition_infos_value_low">in small quantities</string>
    <string name="nutrition_infos_value_moderate">in moderate quantities</string>
    <string name="nutrition_infos_value_high">in moderate quantities</string>
    <string name="nutrition_infos_fat">%1$s of Fat / Lipids</string>
    <string name="nutrition_infos_acid">%1$s of saturated fatty acid</string>
    <string name="nutrition_infos_sugar">%1$s of sugars</string>
    <string name="nutrition_infos_salt">%1$s of salt</string>
    <string name="nutritional_tab_title_per_100g">Per 100g</string>
    <string name="nutritional_tab_title_part">Per part</string>
    <string name="nutritional_tab_energy">Energy</string>
    <string name="nutritional_tab_fat">Fats</string>
    <string name="nutritional_tab_acid">of which Saturated fatty acids</string>
    <string name="nutritional_tab_carbohydrate">Carbohydrates</string>
    <string name="nutritional_tab_sugar">of which Sugars</string>
    <string name="nutritional_tab_fibre">Dietary fibres</string>
    <string name="nutritional_tab_protein">Protein</string>
    <string name="nutritional_tab_salt">Salt</string>
    <string name="nutritional_tab_sodium">Sodium</string>
    <string name="nutritional_tab_value">%1$s</string>
    <string name="scan_bar_code">Scan a barcode</string>
    <string name="no_product_title">You have not scanned anything yet !</string>
    <string name="no_product_subtitle">Click on the button below to begin.</string>
</resources>