<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/nutrition_infos_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nutrition_infos_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/nutrition_infos_title">

        <LinearLayout
            android:id="@+id/nutrition_fat_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/nutrition_infos_title">

            <View
                android:id="@+id/nutrition_fat_sticker"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@drawable/circle"
                android:backgroundTint="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/nutrition_fat_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nutrition_infos_fat"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/nutrition_fat_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nutrition_infos_value_low"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nutrition_acid_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/nutrition_fat_group">

            <View
                android:id="@+id/nutrition_acid_sticker"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@drawable/circle"
                android:backgroundTint="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/nutrition_acid_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nutrition_infos_acid"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/nutrition_acid_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nutrition_infos_value_low"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nutrition_sugar_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/nutrition_acid_group">

            <View
                android:id="@+id/nutrition_sugar_sticker"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@drawable/circle"
                android:backgroundTint="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/nutrition_sugar_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nutrition_infos_sugar"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/nutrition_sugar_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nutrition_infos_value_moderate"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nutrition_salt_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/nutrition_sugar_group">

            <View
                android:id="@+id/nutrition_salt_sticker"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@drawable/circle"
                android:backgroundTint="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/nutrition_salt_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nutrition_infos_salt"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/nutrition_salt_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nutrition_infos_value_high"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>