<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:id="@+id/product_image"
            android:src="@drawable/placeholder"
            android:scaleType="centerCrop"
            android:contentDescription="@string/product_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:paddingTop="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/product_name"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/product_brand"
                    android:textStyle="italic"/>

            </LinearLayout>

            <ImageView
                android:layout_width="18dp"
                android:layout_height="32dp"
                android:id="@+id/bookmark"
                android:src="@drawable/ic_nav_bar_bookmarks"
                android:scaleType="center"
                android:layout_gravity="center"
                android:contentDescription="@string/product_nutriscore" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="16dp"
                android:id="@+id/ranking"
                android:src="@drawable/ic_ranking"
                android:scaleType="center"
                android:layout_gravity="center"
                android:contentDescription="@string/product_nutriscore" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/product_nutriscore"
                android:paddingStart="5dp"
                android:paddingEnd="20dp"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="16dp"
                android:id="@+id/calories"
                android:src="@drawable/ic_calories"
                android:scaleType="center"
                android:layout_gravity="center"
                android:contentDescription="@string/product_calories" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/product_calories"
                android:paddingStart="5dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>